up to start of FE section

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 logs
 target
-node_modules
+.bloop
+.metals
 /.idea
 /.idea_modules
 /.classpath
 /.project
 /.settings
 /RUNNING_PID
+node_modules
+public/compiled
+npm-debug.log
